# vectorDB_migration

./: LICENSE  main.py  pyproject.toml  requirements.txt
faiss_to_qdrant/: api.py  compare_performance.py
faiss_to_qdrant/faiss_index/: build_faiss.py  prepare_Data.py  search_faiss.py
faiss_to_qdrant/qdrant_migration/: batch_upload.py  create_collection.py  create_hybrid.py  query_examples.py  search_hybrid.py  upload_hybrid.py
qdrant_storage/: raft_state.json
qdrant_storage/collections/ms_marco_hybrid/: config.json
qdrant_storage/collections/ms_marco_hybrid/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/ms_marco_hybrid/0/segments/2b630bc0-1c97-4ca3-bb95-06edd6b9621d/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/ms_marco_hybrid/0/segments/412da609-3588-4b4b-9467-04e5e25a62ee/: mutable_id_tracker.mappings  mutable_id_tracker.versions  segment.json
qdrant_storage/collections/ms_marco_hybrid/0/segments/596b45e3-d5f1-4c22-84e4-c2d070dbbca7/: mutable_id_tracker.mappings  mutable_id_tracker.versions  segment.json
qdrant_storage/collections/ms_marco_hybrid/0/segments/a32e805d-5c1f-421b-bb18-2984dd5cecdf/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/ms_marco_hybrid/0/segments/c4f528a3-185c-47aa-8835-d31fef33023b/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/ms_marco_passages/0/: newest_clocks.json
qdrant_storage/collections/ms_marco_passages/0/wal/: first-index
(+36 files in other folders)
